--- a/css/style-helloumi.css
+++ b/css/style-helloumi.css
@@ -1,3 +1,17 @@
+h1 {
+  font-size: 60px;
+  color: #337AB7;
+  margin: 75px 0 70px;
+}
+
+.panel-body {
+  height: 60vh;
+}
+
+.msg-panel-body {
+  overflow: scroll;
+}
+
 .text-date {
   color: #C7C7C7;
   font-size: 12px;
@@ -37,4 +51,14 @@
 .field {
   position: relative;
   padding-right: 70px;
+}
+
+.share-location {
+  width: 100%;
+}
+
+#map-main{
+  width: 100%;
+  height: 91%;
+  margin: 10px 0;
 }
